# tronclass-signin-app

./: DEVELOPMENT.md  README.md  README.zh-CN.md  index.html  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix-output.xml  tsconfig.json  uno.config.ts  vite.config.ts
.llm/: PROMPTS.md  TODO.md
public/: MP_verify_naKkWnM3AAOxQu4v.txt
src/: App.vue  auto-imports.d.ts  components.d.ts  typed-router.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: README.md  index.ts
src/components/: SigninProgress.vue
src/composables/: qrPhoto.ts  qrScanner.ts  tauriQrScanner.ts
src/modules/: pinia.ts
src/pages/: create-user.vue  history.vue  index.vue  settings.vue  share.vue
src/stores/: user.ts
src/styles/: main.css
src/types/: README.md  index.ts
src/utils/: index.ts  tauri.ts
